--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ footer {
 .footer-section button {
     margin-top: 10px;
     padding: 5px 10px;
-    background-color: #4CAF50;
+    background-none: #4CAF50;
     border: none;
     color: white;
     cursor: pointer;
