--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ header {
     margin: 40px 0 0 0;
 }
 footer {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: transparent;
     color: white;
     display: flex;
     justify-content: space-between;
