--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
 .search-bar {
     display: flex;
     align-items: center;
-    background-color: white;
+    background-color: transparent;
     padding: 5px 10px;
     border-radius: 5px;
 }
