--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 }
 
 :root {
-    --primary-color: #6ea2ef;
-    --secondary-color: #88dcf5;
-    --dark-color: #b1b1b1;
+    --primary-color: #010103;
+    --secondary-color: #020607;
+    --dark-color: #f7f6f6;
     --light-color: #f7f9f9;
     --gray-color: rgb(248, 245, 245);
 }
