--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
 }
 
 :root {
-    --primary-color: #010103;
-    --secondary-color: #020607;
-    --dark-color: #f7f6f6;
+    --primary-color: #5eb3dd;
+    --secondary-color: #2562bf;
+    --dark-color: #1c1b1b;
     --light-color: #f7f9f9;
-    --gray-color: rgb(248, 245, 245);
+    --gray-color: rgb(31, 30, 30);
 }
 
 body {
