--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ a {
 
 /* Header Styles */
 header {
-    background-color: transparent;
-    box-shadow: none;
+    background-color: #white;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     position: fixed;
     width: 100%;
     top: 0;
