--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 
 :root {
     --primary-color: #5eb3dd;
-    --secondary-color: #2562bf;
+    --secondary-color: #78a6ec;
     --dark-color: #171616;
-    --light-color: #35dfdf;
+    --light-color: #e0e9e9;
     --gray-color: rgb(105, 104, 104);
 }
 
